--- a/appInfo.json
+++ b/appInfo.json
@@ -5,8 +5,8 @@
     "isLimitedTraffic": false,
     "info": [
       {
-        "title": "标题1",
-        "content": "内容1"
+        "title": "关于0.1.9版本更新说明",
+        "content": "经过这段时间的测试以及收到部分用户邮件留言，给了一些意见和建议，我们在这0.1.9这一版本修改做出的一些更新说明\n"
       },
       {
         "title": "标题2",
