--- a/appInfo.json
+++ b/appInfo.json
@@ -9,7 +9,7 @@
         "content": "经过这段时间的测试以及收到部分用户邮件留言，给了一些意见和建议，我们在这0.1.9这一版本修改做出的一些更新说明\n"
       },
       {
-        "title": "标题2",
+        "title": "About the 0.1.9 version update instructions",
         "content": "内容2"
       }
     ]
