--- a/appInfo.json
+++ b/appInfo.json
@@ -14,11 +14,11 @@
       },
       {
         "title": "感谢点击广告的朋友！",
-        "content": "    去掉流量限制这两天，广告点击明显比之前多了，在此再次表示感谢。有googleplay的朋友，也麻烦再googleplay留下意见，或者鼓励！谢谢了"
+        "content": "    去掉流量限制这两天，广告点击明显比之前多了，在此再次表示感谢。有googleplay的朋友，也麻烦在googleplay留下意见，或者鼓励！谢谢了"
       },
       {
         "title": "Thanks for clicking ads！",
-        "content": "    After removing the traffic limit for two days, the ad clicks were significantly more than before, and I would like to thank you again. Have googleplay friends, but also trouble to googleplay to leave comments, or encourage! Thank you！"
+        "content": "    After removing the traffic limit for two days, the ad clicks were significantly more than before, and I would like to thank you again. Friends who have googleplay, also trouble leaving comments in googleplay, or encourage! Thank you！"
       }
     ]
   }
