--- a/appInfo.json
+++ b/appInfo.json
@@ -6,19 +6,11 @@
     "info": [
       {
         "title": "关于0.1.9版本更新说明公告",
-        "content": "    考虑许久，才决定把每日限制的流量去掉，之前考虑是营造一个比较良好的网络环境，去掉流量限制可能会导致以后服务器负荷过大而关闭。但是不删除流量限制又违背了当初决定做这软件的初衷，当初是因为工作需要，自己搭建了几个vpn，后面发现流量经常过剩，所以才决定分享给各位。这样就有了今天的speedfish\n    发布至今，已经是第19个版本了，从之前纯粹的分享，到了接触googleplay商城，慢慢有了一种争强好胜，想争第一，想把自己的软件做好，想为软件增加更多的服务器，想更好的给大家体验。不过事与愿违，分享之路很遥远，很艰难。0.1.9会是最后这UI的更新，接下来一个月看效果，如果还能维持，我会继续坚持下去。如果不能维持，我将删掉部分服务器，留下一个服务器留给需要的朋友，并且重新增加流量限制。\n    最后感谢你们的支持，谢谢这段时间那些帮忙观看并且点击广告的朋友。\n"
+        "content": "    考虑许久，才决定把每日限制的流量去掉，之前考虑是营造一个比较良好的网络环境，去掉流量限制可能会导致以后服务器负荷过大而关闭。但是不删除流量限制又违背了当初决定做这软件的初衷，当初是因为工作需要，自己搭建了几个vpn，后面发现流量经常过剩，所以才决定分享给各位。这样就有了今天的speedfish\n    发布至今，已经是第19个版本了，从之前纯粹的分享，到了接触googleplay商城，慢慢有了一种争强好胜，想争第一，想把自己的软件做好，想为软件增加更多的服务器，想更好的给大家体验。不过事与愿违，分享之路很遥远，很艰难。0.1.9会是最后这UI的更新，接下来一个月看效果，如果还能维持，我会继续坚持下去。如果不能维持，我将删掉部分服务器，留下一个服务器留给需要的朋友，并且重新增加流量限制。\n    最后感谢你们的支持！\n"
       },
       {
         "title": "About the 0.19 version update",
-        "content": "    After considering it for a long time, it was decided to remove the daily limit traffic. The previous consideration was to create a relatively good network environment. Removing the traffic restriction may cause the server to be overloaded and shut down in the future. However, not deleting the traffic restriction violated the original intention of the software. I originally built a few VPNs because of the need of the work. Later, I found that the traffic was often excessive, so I decided to share it with you. This will have today's speedfish.\n    Since its release, it is already the 19th version. From the pure sharing before, to the contact with googleplay mall, there is a strong competition, I want to fight for the first, I want to make my own software, I want to add more software. More servers, I want to give you a better experience. However, contrary to expectations, the road to sharing is far away and difficult. 0.1.9 will be the last update of this UI, the next month to see the effect, if it can be maintained, I will continue to stick to it. If it can't be maintained, I will delete some servers, leave a server for the friends I need, and increase the traffic limit.\n    Finally, thank you for your support, thank you for helping me to click on the ads during this time.\n"
-      },
-      {
-        "title": "感谢点击广告的朋友！",
-        "content": "    去掉流量限制这两天，广告点击明显比之前多了，在此再次表示感谢。有googleplay的朋友，也麻烦在googleplay留下意见，或者鼓励！谢谢了"
-      },
-      {
-        "title": "Thanks for clicking ads！",
-        "content": "    After removing the traffic limit for two days, the ad clicks were significantly more than before, and I would like to thank you again. Friends who have googleplay, also trouble leaving comments in googleplay, or encourage! Thank you！"
+        "content": "    After considering it for a long time, it was decided to remove the daily limit traffic. The previous consideration was to create a relatively good network environment. Removing the traffic restriction may cause the server to be overloaded and shut down in the future. However, not deleting the traffic restriction violated the original intention of the software. I originally built a few VPNs because of the need of the work. Later, I found that the traffic was often excessive, so I decided to share it with you. This will have today's speedfish.\n    Since its release, it is already the 19th version. From the pure sharing before, to the contact with googleplay mall, there is a strong competition, I want to fight for the first, I want to make my own software, I want to add more software. More servers, I want to give you a better experience. However, contrary to expectations, the road to sharing is far away and difficult. 0.1.9 will be the last update of this UI, the next month to see the effect, if it can be maintained, I will continue to stick to it. If it can't be maintained, I will delete some servers, leave a server for the friends I need, and increase the traffic limit.\n    Finally, thank you for your support！\n"
       }
     ]
   }
