--- a/appInfo.json
+++ b/appInfo.json
@@ -15,7 +15,7 @@
       },
       {
         "title": "0.20版本更新！Look at me！",
-        "content": "    美工回家过年系列（临时决定更新！所以UI比较乱。）！由于昨天发现两个服务器出现问题！临时做的修改，现在加入了全局，还有局部代理选项，方便国内一些浏览的加速（收了几个邮件说之前开访问国内的慢！）！\n     今天收了几个很暖心的留言！真的很点小小的感动！最后感谢大家的支持！祝大家新春快乐！\n\n\n    Artwork goes home for the New Year series (temporary decision to update! So the UI is messy.)! I found problems with two servers yesterday! Temporary changes, now joined the global, as well as local proxy options, to facilitate the acceleration of some domestic browsing (received a few emails said to open the country before the slow!)!\n    I received a few warm messages today! Really a little touched! Finally, thank you for your support! I wish you all a happy New Year!"
+        "content": "    美工回家过年系列（临时决定更新！所以UI比较乱。）！由于昨天发现两个服务器出现问题！临时做的修改，现在加入了全局，还有局部代理选项，方便国内一些浏览的加速（收了几个邮件说之前开访问国内的慢！）！发版仓促，更新到0.2版的朋友，遇到什么问题，可以发邮件或者留言告知！\n     今天收了几个很暖心的留言！真的很点小小的感动！最后感谢大家的支持！祝大家新春快乐！\n\n\n    Artwork goes home for the New Year series (temporary decision to update! So the UI is messy.)! I found problems with two servers yesterday! Temporary changes, now joined the global, as well as local proxy options, to facilitate the acceleration of some domestic browsing (received a few emails said to open the country before the slow!)!\n    I received a few warm messages today! Really a little touched! Finally, thank you for your support! I wish you all a happy New Year!"
       }
     ]
   }
