--- a/appInfo.json
+++ b/appInfo.json
@@ -6,7 +6,7 @@
     "isLimitedTraffic": false,
     "info": [
       {
-        "title": "账号被封",
+        "title": "重大通知！账号被封！",
         "content": "    能看到这公告的朋友，都是SpeedFish最珍惜的好友！是你们给了我希望！不过很不幸，我刚刚收到了广告商的邮件，说我的账户被封了，要30天后才能解封，然后看我后面表现，看会不会永久被封。好的！回想这段时间，我确实是做一些违反广告商的规定（自己点击广告）！现在每天1美金左右的收入，开始让我看到希望，可能大多数也是我自己的点击，呵呵！所以收到这封的邮件我也并不是很惊讶。\n   今天发这份公告主要是想告诉大家，我已经开启了强制升级0.20版本，0.20以下的版本会在下次启动时提示更新。这样我可以把一些情况告知大家，方便大家知道SpeedFish的一些动态。第二点也想告诉大家，我会在接下来这段时间把全部广告全部去掉了，等30天后看情况。可能会坚持下去，这段时间收到你们留言和鼓励，还有一些热心的用户帮我推广，这也是我之前没敢想到的。\n 都大年29收到这样的消息，也只能呵呵了,最后感谢大家这段时间的支持！谢谢大家！祝大家新年快乐！"
       },
       {
