--- a/appInfo.json
+++ b/appInfo.json
@@ -12,6 +12,10 @@
       {
         "title": "Account is blocked",
         "content": "    Friends who can see this announcement are the most treasured friends of SpeedFish! You gave me hope! However, unfortunately, I just received an email from the advertiser saying that my account was blocked. It will take 30 days to unblock it, and then look at my performance to see if it will be permanently blocked. Ok! Recalling this time, I did do some violations of the advertiser's rules (click on the ad myself)! Now, about 1 dollar per day, I start to see hope, and most of them are my own clicks, huh, huh! So I am not surprised to receive this email.\n    The announcement today is mainly to tell everyone that I have already started the mandatory upgrade version 0.20. The version below 0.20 will prompt for the update at the next startup. This way I can tell you some things, so that everyone can know some of the dynamics of SpeedFish. The second point is also to tell everyone, I will remove all the ads in the next period, and wait for 30 days to see the situation. May stick to it, I will receive your message and encouragement during this time, and some enthusiastic users will help me promote it, which I did not dare to think of before.\n    Finally, thank you for your support！"
+      },
+      {
+        "title": "去广告更新要等到年后",
+        "content": "    到现在，广告还是修复不了。要等年后才能修复，程序没有带回老家，修复不了，这几天大家就体谅一下。年后会尽快把广告去掉。"
       }
     ]
   }
