--- a/appInfo.json
+++ b/appInfo.json
@@ -16,6 +16,10 @@
       {
         "title": "去广告更新要等到年后",
         "content": "    到现在，广告还是修复不了。要等年后才能修复，程序没有带回老家，修复不了，这几天大家就体谅一下。年后会尽快把广告去掉。"
+      },
+      {
+        "title": "新春快乐！",
+        "content": "    速鱼给大家拜年了！祝您们新春快乐！。"
       }
     ]
   }
