--- a/appInfo.json
+++ b/appInfo.json
@@ -15,8 +15,8 @@
         "content": "    Friends who can see this announcement are the most treasured friends of SpeedFish! You gave me hope! However, unfortunately, I just received an email from the advertiser saying that my account was blocked. It will take 30 days to unblock it, and then look at my performance to see if it will be permanently blocked. Ok! Recalling this time, I did do some violations of the advertiser's rules (click on the ad myself)! Now, about 1 dollar per day, I start to see hope, and most of them are my own clicks, huh, huh! So I am not surprised to receive this email.\n    The announcement today is mainly to tell everyone that I have already started the mandatory upgrade version 0.20. The version below 0.20 will prompt for the update at the next startup. This way I can tell you some things, so that everyone can know some of the dynamics of SpeedFish. The second point is also to tell everyone, I will remove all the ads in the next period, and wait for 30 days to see the situation. May stick to it, I will receive your message and encouragement during this time, and some enthusiastic users will help me promote it, which I did not dare to think of before.\n    Finally, thank you for your support！"
       },
       {
-        "title": "去广告更新要等到年后",
-        "content": "    到现在，广告还是修复不了。要等年后才能修复，程序没有带回老家，修复不了，这几天大家就体谅一下。年后会尽快把广告去掉。"
+        "title": "同行求放过",
+        "content": "    相信会有一大波1星评论抵达战场，今天收到一个1星评论，说一后台运行就会自动断开连接，或者是有这样的问题，但是为什么断开连接，你还能上googleplay给我留1星的评论。速鱼现在还在成长，我知道速鱼开发过程中一定会遇到一些bug，但是我速鱼，一没有收费，二现在没有广告，三没有宣传，四没有给大家什么承诺，没有欺骗。为什么不给速鱼一个修改的机会，直接来了就1星。3星、4星速鱼知道这些鼓励，让速鱼知道缺陷。如果是同行，我断了你们的发财的路，在这里我对你们说对不起，求放过。最后感谢那些给3星、4星的朋友！还有那些暖心的5星评价！是你们给我信心，给我动力。谢谢你们！"
       },
       {
         "title": "新春快乐！",
