--- a/appInfo.json
+++ b/appInfo.json
@@ -19,8 +19,8 @@
         "content": "    相信会有一大波1星评论抵达战场，今天收到一个1星评论，说一后台运行就会自动断开连接，或者是有这样的问题，但是为什么断开连接，你还能上googleplay给我留1星的评论。速鱼现在还在成长，我知道速鱼开发过程中一定会遇到一些bug，但是我速鱼，一没有收费，二现在没有广告，三没有宣传，四没有给大家什么承诺，没有欺骗。为什么不给速鱼一个修改的机会，直接来了就1星。3星、4星速鱼知道这些鼓励，让速鱼知道缺陷。如果是同行，我断了你们的发财的路，在这里我对你们说对不起，求放过。最后感谢那些给3星、4星的朋友！还有那些暖心的5星评价！是你们给我信心，给我动力。谢谢你们！"
       },
       {
-        "title": "新春快乐！",
-        "content": "    速鱼给大家拜年了！祝您们新春快乐！。"
+        "title": "全局模式和局部模式！",
+        "content": "    关于全局模式和局部模式说明，这两天收到邮件还有回复说介绍一下这两者的区别。全局模式：是全部流量都走服务器，这样访问国内一些网站会比较卡，比较慢，因为要经过服务器来访问国内网络，这样绕了一圈，速度就慢了。局部模式：智能分配，国内网站走本地连接，国外网站走服务器，这样会比较快，缺点是有些比较偏的网站访问不了。建议平时使用用局部模式，如有个别网站访问不了了，在开启全局。"
       }
     ]
   }
