--- a/appInfo.json
+++ b/appInfo.json
@@ -21,6 +21,10 @@
       {
         "title": "全局模式和局部模式说明！",
         "content": "    关于全局模式和局部模式说明，这两天收到邮件还有回复说介绍一下这两者的区别。全局模式：是全部流量都走服务器，这样访问国内一些网站会比较卡，比较慢，因为要经过服务器来访问国内网络，这样绕了一圈，速度就慢了。局部模式：智能分配，国内网站走本地连接，国外网站走服务器，这样会比较快，缺点是有些比较偏的网站访问不了。建议平时使用用局部模式，如有个别网站访问不了了，在开启全局。"
+      },
+      {
+        "title": "新版本即将到来！",
+        "content": "    新版本UI初稿已经设计完毕，在googleplay商城图片那边可以看到，希望大家多给意见！谢谢！"
       }
     ]
   }
