--- a/appInfo.json
+++ b/appInfo.json
@@ -20,7 +20,7 @@
       },
       {
         "title": "重大通知！",
-        "content": "    谢谢大家这段时间的支持，这几天下载量暴增，还收到好多5星留评，我们怕太火了，请大家还是少点留言，稳着着发展，谢谢大家了。"
+        "content": "    谢谢大家这段时间的支持，这几天下载量暴增，还收到好多5星留评，我们怕太火了，请大家还是少点留言，稳着着发展，谢谢大家了\n    刚刚做了一个决定，我们暂停了国内的下载，可能会在未来几个小时，googleplay商城搜收不到速鱼。"
       }
     ]
   }
