--- a/appInfo.json
+++ b/appInfo.json
@@ -19,8 +19,8 @@
         "content": "    关于全局模式和局部模式说明，这两天收到邮件还有回复说介绍一下这两者的区别。全局模式：是全部流量都走服务器，这样访问国内一些网站会比较卡，比较慢，因为要经过服务器来访问国内网络，这样绕了一圈，速度就慢了。局部模式：智能分配，国内网站走本地连接，国外网站走服务器，这样会比较快，缺点是有些比较偏的网站访问不了。建议平时使用用局部模式，如有个别网站访问不了了，在开启全局。"
       },
       {
-        "title": "New-重大通知！",
-        "content": "    谢谢大家这段时间的支持，这几天下载量暴增，还收到好多5星留评，我们怕太火了，请大家还是少点留言，稳着着发展，谢谢大家了\n    刚刚做了一个决定，我们暂停了国内的下载，可能会在未来几个小时，googleplay商城搜收不到速鱼。"
+        "title": "重大通知！",
+        "content": "    谢谢大家这段时间的支持，这几天下载量暴增，还收到好多5星留评，我们怕太火了，请大家还是少点留言，稳着着发展，谢谢大家了"
       }
     ]
   }
