--- a/appInfo.json
+++ b/appInfo.json
@@ -19,8 +19,8 @@
         "content": "    关于全局模式和局部模式说明，这两天收到邮件还有回复说介绍一下这两者的区别。全局模式：是全部流量都走服务器，这样访问国内一些网站会比较卡，比较慢，因为要经过服务器来访问国内网络，这样绕了一圈，速度就慢了。局部模式：智能分配，国内网站走本地连接，国外网站走服务器，这样会比较快，缺点是有些比较偏的网站访问不了。建议平时使用用局部模式，如有个别网站访问不了了，在开启全局。"
       },
       {
-        "title": "New-重大通知！",
-        "content": "    谢谢大家这段时间的支持，这几天下载量暴增，还收到好多5星留评，我们怕太火了，请大家还是少点留言，稳着着发展，谢谢大家了\n     刚刚做了一个决定，暂停了国区的下载，为后面更新做准备，同时也为了保证现在用户的网络质量。"
+        "title": "新增加伦敦、巴黎服务器！",
+        "content": "    好卡！迫不得已，我又加入了两个地区的服务器。算是谢谢大家的支持。我也纳闷，中国区已经关闭了下载，也不知道为什么，下载量还是那么多，这几天晚上我自己用都觉得卡，难道你们使用不会觉得卡么？新版本在筹划中，相信会给支持速鱼的人一个惊喜。"
       }
     ]
   }
