--- a/appInfo.json
+++ b/appInfo.json
@@ -21,6 +21,10 @@
       {
         "title": "新增加伦敦、巴黎服务器！",
         "content": "    好卡！迫不得已，我又加入了两个地区的服务器。算是谢谢大家的支持。我也纳闷，中国区已经关闭了下载，也不知道为什么，下载量还是那么多，这几天晚上我自己用都觉得卡，难道你们使用不会觉得卡么？新版本在筹划中，相信会给支持速鱼的人一个惊喜。"
+      },
+      {
+        "title": "Increase the London, Paris server!",
+        "content": "    "
       }
     ]
   }
