--- a/appInfo.json
+++ b/appInfo.json
@@ -20,7 +20,7 @@
       },
       {
         "title": "对不起大家！",
-        "content": "    好卡！迫不得已，我又加入了两个地区的服务器。加完发现有bug需要更新软件才能加入，昨天晚上有几个小时出问题，现在东京服务器已经挂掉了，现在人数真的太多了。我很纳闷，中国区已经关闭了下载，也不知道为什么，下载量还是那么多，这几天晚上我自己用都觉得卡，难道你们使用不会觉得卡么？新版本在筹划中，相信会给支持速鱼的人一个惊喜。\n    最后真的对不起哈！我也在想办法，东京服务器我想办法换换其他服务器顶上，可能是ip巴黎那边的，造成不便，希望理解，谢谢！！！"
+        "content": "    好卡！迫不得已，我又加入了两个地区的服务器。加完发现有bug需要更新软件才能加入，昨天晚上有几个小时出问题，现在东京服务器已经挂掉了，现在人数真的太多了。我很纳闷，中国区已经关闭了下载，也不知道为什么，下载量还是那么多，这几天晚上我自己用都觉得卡，难道你们使用不会觉得卡么？新版本在筹划中，相信会给支持速鱼的人一个惊喜。\n    最后真的对不起哈！我也在想办法，东京服务器我想办法换换其他服务器顶上，造成不便，希望理解，谢谢！！！"
       }
     ]
   }
