--- a/appInfo.json
+++ b/appInfo.json
@@ -19,7 +19,7 @@
         "content": "    关于全局模式和局部模式说明，这两天收到邮件还有回复说介绍一下这两者的区别。全局模式：是全部流量都走服务器，这样访问国内一些网站会比较卡，比较慢，因为要经过服务器来访问国内网络，这样绕了一圈，速度就慢了。局部模式：智能分配，国内网站走本地连接，国外网站走服务器，这样会比较快，缺点是有些比较偏的网站访问不了。建议平时使用用局部模式，如有个别网站访问不了了，在开启全局。"
       },
       {
-        "title": "对不起大家！",
+      "title": "最近好卡！",
         "content": "    最近好卡！大家将就着用，人数实在是太多了，之前都没有想到会这么多人，等新版本来回给大家加多一些服务器的，现在服务器加了回出错，除非要更新版本，好烦！！！\n    最后真的对不起哈！我也在想办法，造成不便，希望理解，谢谢！！！"
       }
     ]
