--- a/newappInfo.json
+++ b/newappInfo.json
@@ -5,9 +5,9 @@
       "isPreLoadAd": false,
       "closeRewardAd":false,
       "isLimitedTraffic": false,
-	  "cInfo":"中文蓝鲸提示",
+	  "cInfo":"全新代号《蓝鲸》即将发布",
 	  "cInfoTip":"中文蓝鲸点击提示",
-	  "eInfo":"英文蓝鲸提示",
+	  "eInfo":"The new version of "Blue Whale" is coming soon!",
 	  "eInfoTip":"英文蓝鲸点击提示",
 	  "playStoreUrl":"market://details?id=com.speedfish.vpn.shadowsocks",
       "info": [
