--- a/newappInfo.json
+++ b/newappInfo.json
@@ -7,7 +7,7 @@
       "isLimitedTraffic": false,
 	  "cInfo":"全新代号《蓝鲸》即将发布",
 	  "cInfoTip":"中文蓝鲸点击提示",
-	  "eInfo":"The new version of "Blue Whale" is coming soon!",
+	  "eInfo":"The new version of《BlueWhale》is coming soon!",
 	  "eInfoTip":"英文蓝鲸点击提示",
 	  "playStoreUrl":"market://details?id=com.speedfish.vpn.shadowsocks",
       "info": [
