--- a/newappInfo.json
+++ b/newappInfo.json
@@ -9,7 +9,7 @@
 	  "cInfoTip":"中文蓝鲸点击提示",
 	  "eInfo":"The《BlueWhale》is coming soon!",
 	  "eInfoTip":"英文蓝鲸点击提示",
-	  "playStoreUrl":"market://details?id=com.speedfish.vpn.shadowsocks",
+	  "playStoreUrl":"",
       "info": [
         {
           "title": "广告很快就会恢复！",
