--- a/newappInfo.json
+++ b/newappInfo.json
@@ -6,9 +6,9 @@
       "closeRewardAd":false,
       "isLimitedTraffic": false,
 	  "cInfo":"全新代号《蓝鲸》即将发布",
-	  "cInfoTip":"中文蓝鲸点击提示",
+	  "cInfoTip":"即将发布，敬请期待！",
 	  "eInfo":"The《BlueWhale》is coming soon!",
-	  "eInfoTip":"英文蓝鲸点击提示",
+	  "eInfoTip":"Coming soon, so stay tuned!",
 	  "playStoreUrl":"",
       "info": [
         {
