--- a/appInfo.json
+++ b/appInfo.json
@@ -11,7 +11,7 @@
         "content": "    广告很快就会恢复，上个月的3号，封了30天，如果后面恢复广告，影响到体验，也希望指出。希望真能靠广告收益来维持，谢谢大家！"
       },
       {
-        "title": "小版本更新",
+        "title": "已经可以更新",
         "content": "   应用已经下架Google Play，为了后面新代号“蓝鲸”的发布，这两天会更新一个小版本，小版本加入了一个高级服务器，应该可以撑起一大部分人的需求，更多的服务器会在蓝鲸上面加入，由于工作还有各方各面的原因，蓝鲸应该没那么快能做出来，到时候蓝鲸会替代现在的速鱼，同样也是免费。广告账户应该会在这两三天解封，届时速鱼又会有广告了，分享不易，希望理解。如果高级服务器体验还是差的话，也希望能留言，我想看看这高级服务器的负荷能力。\n     最后谢谢那些继续保留速鱼的朋友，虽然体验不好，你们都肯保留，后面蓝鲸一定会做到让大家都不失望。至于后面恢复的广告，望理解！"
       },
       {
