--- a/newappInfo.json
+++ b/newappInfo.json
@@ -3,7 +3,7 @@
  "message": "",
  "data": {
       "isPreLoadAd": false,
-      "closeRewardAd":false,
+      "closeRewardAd":true,
       "isLimitedTraffic": false,
 	  "cInfo":"全新代号《蓝鲸》即将发布",
 	  "cInfoTip":"即将发布，敬请期待！",
