--- a/appInfo.json
+++ b/appInfo.json
@@ -15,8 +15,8 @@
         "content": "   应用已经下架Google Play，为了后面新代号“蓝鲸”的发布，这两天会更新一个小版本，小版本加入了一个高级服务器，应该可以撑起一大部分人的需求，更多的服务器会在蓝鲸上面加入，由于工作还有各方各面的原因，蓝鲸应该没那么快能做出来，到时候蓝鲸会替代现在的速鱼，同样也是免费。广告账户应该会在这两三天解封，届时速鱼又会有广告了，分享不易，希望理解。如果高级服务器体验还是差的话，也希望能留言，我想看看这高级服务器的负荷能力。\n     最后谢谢那些继续保留速鱼的朋友，虽然体验不好，你们都肯保留，后面蓝鲸一定会做到让大家都不失望。至于后面恢复的广告，望理解！"
       },
       {
-      "title": "应用已经下架",
-        "content": "    应用已经下架Google Play，现有的用户的还可以使用，接下来有什么情况会和大家再说的！，这段时间体验不好实在抱歉！"
+      "title": "高级服务器添加完毕",
+        "content": "    大家可以升级试试！看看会不会有所改善。"
       }
     ]
   }
