--- a/newappInfo.json
+++ b/newappInfo.json
@@ -12,8 +12,8 @@
 	  "playStoreUrl":"",
       "info": [
         {
-          "title": "广告很快就会恢复！",
-          "content": "    广告很快就会恢复，上个月的3号，封了30天，如果后面恢复广告，影响到体验，也希望指出。希望真能靠广告收益来维持，谢谢大家！"
+          "title": "广告已经正常！",
+          "content": "    30天了，久违，你好Admob！广告已经正常了，后面造成体验不好，为求生存，实在抱歉！"
         },
         {
           "title": "小版本更新",
