--- a/newappInfo.json
+++ b/newappInfo.json
@@ -13,7 +13,7 @@
       "info": [
         {
           "title": "广告已经正常！",
-          "content": "    30天了，久违，你好Admob！广告已经正常了，后面造成体验不好，为求生存，实在抱歉！"
+          "content": "    30天了，久违，你好Admob！广告已经正常了，后面造成体验不好，为求生存，实在抱歉！\n    刚刚恢复，广告会比较不稳定，前期看了没反应，连续三次加载失败，会自动跳过广告。如果遇到这种情况也属于正常。"
         },
         {
           "title": "小版本更新",
