--- a/appInfo.json
+++ b/appInfo.json
@@ -7,8 +7,8 @@
     "isLimitedTraffic": false,
     "info": [
       {
-        "title": "广告很快就会恢复！",
-        "content": "    广告很快就会恢复，上个月的3号，封了30天，如果后面恢复广告，影响到体验，也希望指出。希望真能靠广告收益来维持，谢谢大家！"
+        "title": "已经启动强制更新",
+        "content": "    今天看了一下，现在还有好多人停留在之前的版本，新版本优化了很多，为了更好的体验，我们决定开启强制更新，造成不便，希望理解！\n     如果自动更新不了，请到googleplay进行更新。"
       },
       {
         "title": "已经可以更新",
