--- a/newappInfo.json
+++ b/newappInfo.json
@@ -3,7 +3,7 @@
  "message": "",
  "data": {
       "isPreLoadAd": false,
-      "closeRewardAd":true,
+      "closeRewardAd":false,
       "isLimitedTraffic": false,
 	  "cInfo":"全新代号《蓝鲸》即将发布",
 	  "cInfoTip":"即将发布，敬请期待！",
@@ -12,8 +12,8 @@
 	  "playStoreUrl":"",
       "info": [
         {
-          "title": "广告又关闭了！",
-          "content": "    这才一天啊....啊啊啊啊啊啊啊啊！！！\n    可能是给特别关照了，现在广告加载好难。今天决定重新关闭了，等哪天好点在加回吧"
+          "title": "广告在试试！",
+          "content": "    广告明天试试看看效果，后天在看！"
         },
         {
           "title": "小版本更新",
