--- a/newappInfo.json
+++ b/newappInfo.json
@@ -18,6 +18,10 @@
         {
         "title": "高级服务器怎么样",
           "content": "    新加的高级服务器怎么样？会不会有所改善？还卡的话可以发邮件给我，或者留言！谢谢！"
+        },
+	{
+          "title": "重新上架",
+          "content": "   应用重新上架GooglePlay，测试了两天的广告，发现你们给信息和留言都是说加载不了，我一度怀疑我是给穿小鞋了，然而就算是，我又能怎么样！今天突然想到是不是因为我应用没有上架的问题，临时把应用上架试试这几天的效果，还是那样。我也只能呵呵呵，继续免广告，等到我找到解决方法为止。\n     初上广告，好怕有人会发邮件来骂我，还好！收到都是一些好人一生平安的邮件！再给速鱼多些机会！谢谢大家！！！"
         }
       ]
     }
