--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,8 +16,8 @@
           "content": "   应用已经下架Google Play，为了后面新代号“蓝鲸”的发布，这两天会更新一个小版本，小版本加入了一个高级服务器，应该可以撑起一大部分人的需求，更多的服务器会在蓝鲸上面加入，由于工作还有各方各面的原因，蓝鲸应该没那么快能做出来，到时候蓝鲸会替代现在的速鱼，同样也是免费。广告账户应该会在这两三天解封，届时速鱼又会有广告了，分享不易，希望理解。如果高级服务器体验还是差的话，也希望能留言，我想看看这高级服务器的负荷能力。\n     最后谢谢那些继续保留速鱼的朋友，虽然体验不好，你们都肯保留，后面蓝鲸一定会做到让大家都不失望。至于后面恢复的广告，望理解！"
         },
         {
-        "title": "高级服务器怎么样",
-          "content": "    新加的高级服务器怎么样？会不会有所改善？还卡的话可以发邮件给我，或者留言！谢谢！"
+        "title": "高级服务器也撑不住了",
+          "content": "    卡么！我也卡，这才6台服务器，平均同时在线有500~600人，这一上架我又开始头疼了，好尴尬,广告展示率不到2%，就是说有100个人，只有两个人加载得出广告！一到晚上真的有点卡！我自己用的也加载好久。我们也没有限速，全凭自己网络来占，那个运气好，可以有几M的下载，运气不好显示已连接，可还是出不去。这一会又收到几个邮件说卡！我是真没办法，开了广告优化一下，控制人员，但是广告加载不出，体验又不好。这这这！！！！！！！"
         },
 	{
           "title": "重新上架",
