--- a/newappInfo.json
+++ b/newappInfo.json
@@ -12,16 +12,8 @@
 	  "playStoreUrl":"",
       "info": [
         {
-          "title": "小版本更新",
-          "content": "   应用已经下架Google Play，为了后面新代号“蓝鲸”的发布，这两天会更新一个小版本，小版本加入了一个高级服务器，应该可以撑起一大部分人的需求，更多的服务器会在蓝鲸上面加入，由于工作还有各方各面的原因，蓝鲸应该没那么快能做出来，到时候蓝鲸会替代现在的速鱼，同样也是免费。广告账户应该会在这两三天解封，届时速鱼又会有广告了，分享不易，希望理解。如果高级服务器体验还是差的话，也希望能留言，我想看看这高级服务器的负荷能力。\n     最后谢谢那些继续保留速鱼的朋友，虽然体验不好，你们都肯保留，后面蓝鲸一定会做到让大家都不失望。至于后面恢复的广告，望理解！"
-        },
-        {
-        "title": "高级服务器也撑不住了",
-          "content": "    卡么！我也卡，这才6台服务器，平均同时在线有500~600人，这一上架我又开始头疼了，好尴尬,广告展示率不到2%，就是说有100个人，只有两个人加载得出广告！一到晚上真的有点卡！我自己用的也加载好久。我们也没有限速，全凭自己网络来占，那个运气好，可以有几M的下载，运气不好显示已连接，可还是出不去。这一会又收到几个邮件说卡！我是真没办法，开了广告优化一下，控制人员，但是广告加载不出，体验又不好。这这这！！！！！！！"
-        },
-	{
-          "title": "重新上架",
-          "content": "   应用重新上架GooglePlay，测试了两天的广告，发现你们给信息和留言都是说加载不了，我一度怀疑我是给穿小鞋了，然而就算是，我又能怎么样！今天突然想到是不是因为我应用没有上架的问题，临时把应用上架试试这几天的效果，还是那样。我也只能呵呵呵，继续免广告，等到我找到解决方法为止。\n     初上广告，好怕有人会发邮件来骂我，还好！收到都是一些好人一生平安的邮件！再给速鱼多些机会！谢谢大家！！！"
+          "title": "屋漏偏逢连夜雨！",
+          "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         }
       ]
     }
