--- a/newappInfo.json
+++ b/newappInfo.json
@@ -18,6 +18,10 @@
 	 {
           "title": "高级服务器没有了",
           "content": "   高级服务器还有洛杉矶服务器已经给删了，剩下这几个将就用吧！我在想办法！"
+        },
+	 {
+          "title": "测试！！！",
+          "content": "   剩下的几台服务器，我做了Bt、PT的限制，也不知道管不管用。有这东西的可以帮我测试测试现在能不能下载。可以的话，也麻烦告诉我一声，小的在此先感谢了！！"
         }
       ]
     }
