--- a/newappInfo.json
+++ b/newappInfo.json
@@ -22,6 +22,10 @@
 	 {
           "title": "测试！！！",
           "content": "   剩下的几台服务器，我做了Bt、PT的限制，也不知道管不管用。有这东西的可以帮我测试测试现在能不能下载。可以的话，也麻烦告诉我一声，小的在此先感谢了！！"
+        },
+	 {
+          "title": "想弄个微博",
+          "content": "   大家有什么建议？脸书好还是推特好？你们那个用得多？"
         }
       ]
     }
