--- a/newappInfo.json
+++ b/newappInfo.json
@@ -25,7 +25,7 @@
         },
 	 {
           "title": "想弄个微博",
-          "content": "   大家有什么建议？脸书好还是推特好？你们那个用得多？"
+          "content": "   大家有什么建议？脸书好还是推特好？你们那个用得多？啊啊啊啊啊！好想让你们看看现在蓝鲸的进度啊！阿阿阿阿阿阿！原谅我的爱现！"
         }
       ]
     }
