--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,16 +16,8 @@
           "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         },
 	 {
-          "title": "高级服务器没有了",
-          "content": "   高级服务器还有洛杉矶服务器已经给删了，剩下这几个将就用吧！我在想办法！"
-        },
-	 {
-          "title": "测试！！！",
-          "content": "   剩下的几台服务器，我做了Bt、PT的限制，也不知道管不管用。有这东西的可以帮我测试测试现在能不能下载。可以的话，也麻烦告诉我一声，小的在此先感谢了！！"
-        },
-	 {
-          "title": "想弄个微博",
-          "content": "   大家有什么建议？脸书好还是推特好？你们那个用得多？啊啊啊啊啊！好想让你们看看现在蓝鲸的进度啊！阿阿阿阿阿阿！原谅我的爱现！"
+          "title": "全部服务器不用了",
+          "content": "   广告好像有点恢复了，但是全部服务器都挂了！我们再看有什么办法。"
         }
       ]
     }
