--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,8 +16,8 @@
           "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         },
 	 {
-          "title": "全部服务器不用了",
-          "content": "   广告好像有点恢复了，但是全部服务器都挂了！我们再看有什么办法。"
+          "title": "重新添加了",
+          "content": "   服务器加了几台，可以清除一下速鱼的历史，重新连接就可以有新的服务器，高级服务器要更新版本才能重新加入。其他服务器已经可以了，不过我自己测试了一下，速度有点慢，可能是加了禁BT还是pt协议的问题，测试测试，看以后怎么解决，现在还是不稳定。"
         }
       ]
     }
