--- a/newappInfo.json
+++ b/newappInfo.json
@@ -17,7 +17,7 @@
         },
 	 {
           "title": "重新添加了",
-          "content": "   服务器加了几台，可以清除一下速鱼的历史，重新连接就可以有新的服务器，高级服务器要更新版本才能重新加入。其他服务器已经可以了，不过我自己测试了一下，速度有点慢，可能是加了禁BT还是pt协议的问题，测试测试，看以后怎么解决，现在还是不稳定。"
+          "content": "   服务器加了几台，可以清除一下速鱼的历史，重新连接就可以有新的服务器，高级服务器要更新版本才能重新加入。其他服务器已经可以了，不过我自己测试了一下，速度有点慢，可能是加了禁BT还是pt协议的问题，测试测试，看以后怎么解决，现在还是不稳定。\n    还有明天会测试多一天广告。"
         }
       ]
     }
