--- a/newappInfo.json
+++ b/newappInfo.json
@@ -17,7 +17,7 @@
         },
 	 {
           "title": "说说现在的情况",
-          "content": "   关于服务器，服务器这段时间封锁严重，之前上一批服务器全部给墙了，昨天晚上重新买了5台服务器，也加进去了，但是我总感觉这几台的速度大不如前，特别是晚上，昨天等到3点才感觉开始有点好转，我也下了别人的来试试，好像这段时间普遍都是这样的情况（说明下，我不是想踩别人来抬高自己，因为我自己服务器我试了，我也觉得慢，我只是想找原因）至于后面要怎么优化，我需要观察，你们有点人留言说服务器垃圾，服务器慢，这点我自己知道，我也不反驳。\n    然后我说说广告问题，广告昨天中午开始有点好转，我自己手机也看到了，看了后台数据也是，明显比恢复了一些，可能还是有大部分要开启其他服务器会加载不出来，这个我也没办法，不过我们之前也设计了一种机制，如果三次加载不出，会自动跳过广告，自动开启服务器。今天我会在观察广告多一天，看看是怎么个情况。\n    最好说说打算，至于高级服务器，这版设计没有考虑到远程，之前以后这是最后一版，下一版就会出蓝鲸，不过这几天遇到这些幺蛾子，进度也一直提不起来，所以后面可能有考虑在升级一下应用，在重新添加多一台服务器，不然真的好慢。大概也说了这些，可能现在是非常时期，好多软件都挂了，大家见谅。速鱼敬上！！！！2019-03-12!"
+          "content": "   关于服务器，服务器这段时间封锁严重，之前上一批服务器全部给墙了，昨天晚上重新买了5台服务器，也加进去了，但是我总感觉这几台的速度大不如前，特别是晚上，昨天等到3点才感觉开始有点好转，我也下了别人的来试试，好像这段时间普遍都是这样的情况（说明下，我不是想踩别人来抬高自己，因为我自己服务器我试了，我也觉得慢，我只是想找原因）至于后面要怎么优化，我需要观察，你们有点人留言说服务器垃圾，服务器慢，这点我自己知道，我也不反驳。\n    然后我说说广告问题，广告昨天中午开始有点好转，我自己手机也看到了，看了后台数据也是，明显比恢复了一些，可能还是有大部分要开启其他服务器会加载不出来，这个我也没办法，不过我们之前也设计了一种机制，如果三次加载不出，会自动跳过广告，自动开启服务器。今天我会在观察广告多一天，看看是怎么个情况。\n    最好说说打算，至于高级服务器，这版设计没有考虑到远程，之前以为这是最后一版，下一版就会出蓝鲸，不过这几天遇到这么多幺蛾子，进度也一直提不起来，所以后面可能有考虑在升级一下应用，在重新添加多一台服务器，不然真的好慢。大概也说了这些，可能现在是非常时期，好多软件都挂了，大家见谅。速鱼敬上！！！！2019-03-12!"
         }
       ]
     }
