--- a/newappInfo.json
+++ b/newappInfo.json
@@ -20,8 +20,8 @@
           "content": "   关于服务器，服务器这段时间封锁严重，之前上一批服务器全部给墙了，昨天晚上重新买了5台服务器，也加进去了，但是我总感觉这几台的速度大不如前，特别是晚上，昨天等到3点才感觉开始有点好转，我也下了别人的来试试，好像这段时间普遍都是这样的情况（说明下，我不是想踩别人来抬高自己，因为我自己服务器我试了，我也觉得慢，我只是想找原因）至于后面要怎么优化，我需要观察，你们有点人留言说服务器垃圾，服务器慢，这点我自己知道，我也不反驳。\n    然后我说说广告问题，广告昨天中午开始有点好转，我自己手机也看到了，看了后台数据也是，明显比恢复了一些，可能还是有大部分要开启其他服务器会加载不出来，这个我也没办法，不过我们之前也设计了一种机制，如果三次加载不出，会自动跳过广告，自动开启服务器。今天我会在观察广告多一天，看看是怎么个情况。\n    最后说说打算，至于高级服务器，这版设计没有考虑到远程，之前以为这是最后一版，下一版就会出蓝鲸，不过这几天遇到这么多幺蛾子，进度也一直提不起来，所以后面可能有考虑在升级一下应用，在重新添加多一台服务器，不然真的好慢。大概也说了这些，可能现在是非常时期，好多软件都挂了，大家见谅。速鱼敬上！！！！2019-03-12!"
         },
 	 {
-          "title": "抱歉！",
-          "content": "   这几天体验不好！实在抱歉！接下来几天有事要忙！可能没什么时间管理！，收益今天也回到解放前！看你们几个人发邮件说广告还是难加载，这样的情况普遍么！如果再多一些人发邮件反馈这样的问题，我就把广告关了！反正收益也不多！晚上还是很卡！我知道，服务器的添加要延后了！。"
+          "title": "广告停了",
+          "content": "   恩！还是挺多人反馈这个广告加载不出的问题，我这边在这里先停了，反正收益都不多！刚刚发现又两天挂掉了，我这会重新上，悉尼还有多伦多！"
         }
       ]
     }
