--- a/newappInfo.json
+++ b/newappInfo.json
@@ -22,6 +22,10 @@
 	 {
           "title": "广告停了",
           "content": "   恩！还是挺多人反馈这个广告加载不出的问题，我这边在这里先停了，反正收益都不多！刚刚发现又两天挂掉了，我这会重新上，悉尼还有多伦多！"
+        },
+	 {
+          "title": "小哥哥们",
+          "content": "   高级节点现在用不了！高级节点现在用不了！高级节点现在用不了！要更新版本才能更新加入！这段时间没时间弄！将就用吧！居然还有人发邮件说我是骗子！！！这我骗你什么了！！！！说高级节点根本就用不了！.....啊啊啊啊啊啊啊啊啊啊！！！！！！"
         }
       ]
     }
