--- a/newappInfo.json
+++ b/newappInfo.json
@@ -20,12 +20,8 @@
           "content": "   关于服务器，服务器这段时间封锁严重，之前上一批服务器全部给墙了，昨天晚上重新买了5台服务器，也加进去了，但是我总感觉这几台的速度大不如前，特别是晚上，昨天等到3点才感觉开始有点好转，我也下了别人的来试试，好像这段时间普遍都是这样的情况（说明下，我不是想踩别人来抬高自己，因为我自己服务器我试了，我也觉得慢，我只是想找原因）至于后面要怎么优化，我需要观察，你们有点人留言说服务器垃圾，服务器慢，这点我自己知道，我也不反驳。\n    然后我说说广告问题，广告昨天中午开始有点好转，我自己手机也看到了，看了后台数据也是，明显比恢复了一些，可能还是有大部分要开启其他服务器会加载不出来，这个我也没办法，不过我们之前也设计了一种机制，如果三次加载不出，会自动跳过广告，自动开启服务器。今天我会在观察广告多一天，看看是怎么个情况。\n    最后说说打算，至于高级服务器，这版设计没有考虑到远程，之前以为这是最后一版，下一版就会出蓝鲸，不过这几天遇到这么多幺蛾子，进度也一直提不起来，所以后面可能有考虑在升级一下应用，在重新添加多一台服务器，不然真的好慢。大概也说了这些，可能现在是非常时期，好多软件都挂了，大家见谅。速鱼敬上！！！！2019-03-12!"
         },
 	 {
-          "title": "广告停了",
-          "content": "   恩！还是挺多人反馈这个广告加载不出的问题，我这边在这里先停了，反正收益都不多！刚刚发现又两天挂掉了，我这会重新上，悉尼还有多伦多！"
-        },
-	 {
-          "title": "小哥哥们",
-          "content": "   高级节点现在用不了！高级节点现在用不了！高级节点现在用不了！要更新版本才能更新加入！这段时间没时间弄！将就用吧！居然还有人发邮件说我是骗子！！！这我骗你什么了！！！！说高级节点根本就用不了！.....啊啊啊啊啊啊啊啊啊啊！！！！！！"
+          "title": "关于蓝鲸",
+          "content": "   放在前面，高级服务器现在用不了，高级服务器现在用不了，高级服务器现在用不了。这几天总是有人留言说我很惨，我自己没觉得自己是惨鸭，我开发速鱼前，一直是别人app的使用者，也经常吐槽开发者，也因为是经常吐槽，才决定开发这速鱼，只是开始一脑热，没想那么长远。这几个月来，自己的体验，还有大家的反馈，还经历过前几个星期最艰难的时期，这些其实不是惨，我反倒觉得在为后面应用的更新做铺垫，没经历过这些，我不会想重新做一款蓝鲸，没经历这些，我不会知道速鱼的短板在哪里，没经历过这些，我不会知道其实服务器也挺贵的，没经历过这些，我不会知道其实你们一直在支持我。\n    说到蓝鲸，这几天有人在问，说上面有个叫鲸蓝的，我自己也看了一下，确实是有，不过他们是公司的，也做好大，也是付费的。前面我也没想那么多，只是名字而且，我也丝毫没有想蹭他们大公司的热度，或许后面会在改名字吧，不过我是真喜欢蓝鲸这个名字，这个后面再看吧，现在还是把服务器优化好，这才是我该做的，速鱼应该是停更了，过渡期间会更换服务器，保证能用，白天我看速度还是可以的，晚上就是看怎么抢速了，有时候可以，有时候巨难。蓝鲸应该是下个月出来，到时候会发布测试版，我也想找一些朋友帮我测试测试，找找bug，到时候googleplay会有申请通道，希望大家能帮帮忙。至于你们有人问，蓝鲸收费么，蓝鲸会一样免费，不过广告会全部回来，现在你们说我服务器开销撑不撑得了，我不是什么富二代，没有多少资产。只是现在我觉得有那么一件事，我想去做。所以开销这些你们不用担心，我自己也是在等蓝鲸。不想因为前期的费用而半途而废。至于有人问，服务器一台一个月多少钱，我是觉得现在这阶段我回答并不好，说了有种哭穷的嫌疑。等收支平衡后，我会公布服务器的费用，普通的服务器的费用还好，高级服务器老实说我是耗不起，所以才关了，当然最主要还是开发的问题，时间仓促，没有做远程，所以很麻烦。还有很多，还有很多。我们蓝鲸见呗！速鱼敬上！2019-03-19."
         }
       ]
     }
