--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,8 +16,8 @@
           "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         },
 	 {
-          "title": "说说现在的情况",
-          "content": "   关于服务器，服务器这段时间封锁严重，之前上一批服务器全部给墙了，昨天晚上重新买了5台服务器，也加进去了，但是我总感觉这几台的速度大不如前，特别是晚上，昨天等到3点才感觉开始有点好转，我也下了别人的来试试，好像这段时间普遍都是这样的情况（说明下，我不是想踩别人来抬高自己，因为我自己服务器我试了，我也觉得慢，我只是想找原因）至于后面要怎么优化，我需要观察，你们有点人留言说服务器垃圾，服务器慢，这点我自己知道，我也不反驳。\n    然后我说说广告问题，广告昨天中午开始有点好转，我自己手机也看到了，看了后台数据也是，明显比恢复了一些，可能还是有大部分要开启其他服务器会加载不出来，这个我也没办法，不过我们之前也设计了一种机制，如果三次加载不出，会自动跳过广告，自动开启服务器。今天我会在观察广告多一天，看看是怎么个情况。\n    最后说说打算，至于高级服务器，这版设计没有考虑到远程，之前以为这是最后一版，下一版就会出蓝鲸，不过这几天遇到这么多幺蛾子，进度也一直提不起来，所以后面可能有考虑在升级一下应用，在重新添加多一台服务器，不然真的好慢。大概也说了这些，可能现在是非常时期，好多软件都挂了，大家见谅。速鱼敬上！！！！2019-03-12!"
+          "title": "最新公告",
+          "content": "   谢谢各位邮件的反馈，服务器卡，我知道！请大家再耐心等等，速鱼先将就用用，蓝鲸28号可以上内侧版，然后测试几天可以上公测版，到时候公测版我会告诉大家，大家可以帮我测试测试。\n    最后谢谢大家这几天的支持，现在有点收益了，比之前刚刚开始多了挺多的，有点意外，有点惊喜，当然现在还是没有到预计值，不过我是真的看到希望，谢谢了大家！速鱼敬上！！！！2019-03-27!"
         },
 	 {
           "title": "关于蓝鲸",
