--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,8 +16,8 @@
           "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         },
 	 {
-          "title": "最新公告",
-          "content": "   谢谢各位邮件的反馈，服务器卡，我知道！请大家再耐心等等，速鱼先将就用用，蓝鲸28号可以上内侧版，然后测试几天可以上公测版，到时候公测版我会告诉大家，大家可以帮我测试测试。\n    最后谢谢大家这几天的支持，现在有点收益了，比之前刚刚开始多了挺多的，有点意外，有点惊喜，当然现在还是没有到预计值，不过我是真的看到希望，谢谢了大家！速鱼敬上！！！！2019-03-27!"
+          "title": "蓝鲸基本开发完了",
+          "content": "   这段时间断断续续的弄，内测版给googleplay下架了，今天才看到，早上给发了申诉，等那边回复。蓝鲸功能什么的基本都做完了，现在在优化平板上面UI的问题，还有买多一倍的服务器，测试完服务器就可以添加上去!还有其他手尾，还请在等我们2~3天，现在公测也我自己测试，因为公测是无广告版本，怕以后出问题，也不好修复，还有关于全局问题，我们也在找一个比较合适的办法，总之说那么多，我也希望到时候服务器质量你们能接受，因为我自己和几个朋友共用的一台独立服务器，到晚上还是有点卡，有些担忧。总之总之，希望蓝鲸上线后你们会喜欢。"
         },
 	 {
           "title": "关于蓝鲸",
