--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,8 +16,8 @@
           "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         },
 	 {
-          "title": "蓝鲸基本开发完了",
-          "content": "   这段时间断断续续的弄，内测版给googleplay下架了，今天才看到，早上给发了申诉，等那边回复。蓝鲸功能什么的基本都做完了，现在在优化平板上面UI的问题，还有买多一倍的服务器，测试完服务器就可以添加上去!还有其他手尾，还请在等我们2~3天，现在公测也我自己测试，因为公测是无广告版本，怕以后出问题，也不好修复，还有关于全局问题，我们也在找一个比较合适的办法，总之说那么多，我也希望到时候服务器质量你们能接受，因为我自己和几个朋友共用的一台独立服务器，到晚上还是有点卡，有些担忧。总之总之，希望蓝鲸上线后你们会喜欢。"
+          "title": "完美",
+          "content": "   各种测试已经进行得差不多，就差服务器列表测试了，测试完就等谷歌申诉成功，成功就可以马上上线！我也有点小激动！先给大家打个预防针，蓝鲸加多了一个全屏广告，就跳一下那种，不会耽误太多时间，还有各服务器广告也会恢复，到时候再加载不出广告，会自动跳过，当然要求不高的小伙伴，会有一个不用看广告的服务器，高级服务器前期就只有一个！后面有收益会增加的，请见谅，3个多月的服务器开销，说难我也坚持下来了！后面就看大家了！还有就是全局模式还在开发中，先上线后在完善，欠你们的承诺，我也差不多可以实现了！蓝鲸真的要来了！期待与你们相遇！！！"
         },
 	 {
           "title": "关于蓝鲸",
