--- a/newappInfo.json
+++ b/newappInfo.json
@@ -20,6 +20,10 @@
           "content": "   各种测试已经进行得差不多，就差服务器列表测试了，测试完就等谷歌申诉成功，成功就可以马上上线！我也有点小激动！先给大家打个预防针，蓝鲸加多了一个全屏广告，就跳一下那种，不会耽误太多时间，还有各服务器广告也会恢复，到时候再加载不出广告，会自动跳过，当然要求不高的小伙伴，会有一个不用看广告的服务器，高级服务器前期就只有一个！后面有收益会增加的，请见谅，3个多月的服务器开销，说难我也坚持下来了！后面就看大家了！还有就是全局模式还在开发中，先上线后在完善，欠你们的承诺，我也差不多可以实现了！蓝鲸真的要来了！期待与你们相遇！！！"
         },
 	 {
+          "title": "东京服务器挂了",
+          "content": "   东京服务器挂了，明天看看情况修复！！！"
+        },
+	 {
           "title": "关于蓝鲸",
           "content": "   放在前面，高级服务器现在用不了，高级服务器现在用不了，高级服务器现在用不了。这几天总是有人留言说我很惨，我自己没觉得自己是惨鸭，我开发速鱼前，一直是别人app的使用者，也经常吐槽开发者，也因为是经常吐槽，才决定开发这速鱼，只是开始一脑热，没想那么长远。这几个月来，自己的体验，还有大家的反馈，还经历过前几个星期最艰难的时期，这些其实不是惨，我反倒觉得在为后面应用的更新做铺垫，没经历过这些，我不会想重新做一款蓝鲸，没经历这些，我不会知道速鱼的短板在哪里，没经历过这些，我不会知道其实服务器也挺贵的，没经历过这些，我不会知道其实你们一直在支持我。\n    说到蓝鲸，这几天有人在问，说上面有个叫鲸蓝的，我自己也看了一下，确实是有，不过他们是公司的，也做好大，也是付费的。前面我也没想那么多，只是名字而且，我也丝毫没有想蹭他们大公司的热度，或许后面会在改名字吧，不过我是真喜欢蓝鲸这个名字，这个后面再看吧，现在还是把服务器优化好，这才是我该做的，速鱼应该是停更了，过渡期间会更换服务器，保证能用，白天我看速度还是可以的，晚上就是看怎么抢速了，有时候可以，有时候巨难。蓝鲸应该是下个月出来，到时候会发布测试版，我也想找一些朋友帮我测试测试，找找bug，到时候googleplay会有申请通道，希望大家能帮帮忙。至于你们有人问，蓝鲸收费么，蓝鲸会一样免费，不过广告会全部回来，现在你们说我服务器开销撑不撑得了，我不是什么富二代，没有多少资产。只是现在我觉得有那么一件事，我想去做。所以开销这些你们不用担心，我自己也是在等蓝鲸。不想因为前期的费用而半途而废。至于有人问，服务器一台一个月多少钱，我是觉得现在这阶段我回答并不好，说了有种哭穷的嫌疑。等收支平衡后，我会公布服务器的费用，普通的服务器的费用还好，高级服务器老实说我是耗不起，所以才关了，当然最主要还是开发的问题，时间仓促，没有做远程，所以很麻烦。还有很多，还有很多。我们蓝鲸见呗！速鱼敬上！2019-03-19."
         }
