--- a/newappInfo.json
+++ b/newappInfo.json
@@ -16,12 +16,8 @@
           "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
         },
 	 {
-          "title": "完美",
-          "content": "   各种测试已经进行得差不多，就差服务器列表测试了，测试完就等谷歌申诉成功，成功就可以马上上线！我也有点小激动！先给大家打个预防针，蓝鲸加多了一个全屏广告，就跳一下那种，不会耽误太多时间，还有各服务器广告也会恢复，到时候再加载不出广告，会自动跳过，当然要求不高的小伙伴，会有一个不用看广告的服务器，高级服务器前期就只有一个！后面有收益会增加的，请见谅，3个多月的服务器开销，说难我也坚持下来了！后面就看大家了！还有就是全局模式还在开发中，先上线后在完善，欠你们的承诺，我也差不多可以实现了！蓝鲸真的要来了！期待与你们相遇！！！"
-        },
-	 {
-          "title": "东京服务器挂了",
-          "content": "   东京服务器挂了，明天看看情况修复！！！"
+          "title": "白天上线",
+          "content": "   申诉成功，服务器测试完毕，白天添加新服务器后就可以上线，公测版，有兴趣到时候可以搜索蓝鲸，进行公测，公测一天，就可以上正式版，目前全局还没做好，全局在后面一版更新，大概就这些。好累！这几天！！！啊啊啊啊啊啊啊啊！！！！2019-04-11，蓝鲸敬上！！！！"
         },
 	 {
           "title": "关于蓝鲸",
