--- a/newappInfo.json
+++ b/newappInfo.json
@@ -5,10 +5,10 @@
       "isPreLoadAd": false,
       "closeRewardAd":true,
       "isLimitedTraffic": false,
-	  "cInfo":"全新代号《蓝鲸》即将发布",
-	  "cInfoTip":"即将发布，敬请期待！",
-	  "eInfo":"The《BlueWhale》is coming soon!",
-	  "eInfoTip":"Coming soon, so stay tuned!",
+	  "cInfo":"“蓝鲸”公测已经上线",
+	  "cInfoTip":"搜索“bluewhale vpn”",
+	  "eInfo":"“BlueWhale” public beta is online",
+	  "eInfoTip":"search for“bluewhale vpn”",
 	  "playStoreUrl":"",
       "info": [
         {
