--- a/newappInfo.json
+++ b/newappInfo.json
@@ -12,16 +12,8 @@
 	  "playStoreUrl":"",
       "info": [
         {
-          "title": "屋漏偏逢连夜雨！",
-          "content": "   这！！！还没解决广告商问题，服务器商又给我发了几封邮件，说我们的服务器有些小伙伴在非法下载国外有版权的电影视频，要求我给解释。这....我能怎么解释啊！阿阿阿阿阿阿！这几天要把全部服务器都停了，或者关了，我要想办法，解决这个问题。\n    今天你们搜不出服务器也正常，因为我已经决定删了服务器。广告加载不了，我可以等，这服务器商又是要停，以后都用不了，如果觉得应用占了内存，也删了吧！等哪天下次见面可能已经是蓝鲸了！谢谢理解！"
-        },
-	 {
-          "title": "白天上线",
-          "content": "   申诉成功，服务器测试完毕，白天添加新服务器后就可以上线，公测版，有兴趣到时候可以搜索蓝鲸，进行公测，公测一天，就可以上正式版，目前全局还没做好，全局在后面一版更新，大概就这些。好累！这几天！！！啊啊啊啊啊啊啊啊！！！！2019-04-11，蓝鲸敬上！！！！"
-        },
-	 {
-          "title": "关于蓝鲸",
-          "content": "   放在前面，高级服务器现在用不了，高级服务器现在用不了，高级服务器现在用不了。这几天总是有人留言说我很惨，我自己没觉得自己是惨鸭，我开发速鱼前，一直是别人app的使用者，也经常吐槽开发者，也因为是经常吐槽，才决定开发这速鱼，只是开始一脑热，没想那么长远。这几个月来，自己的体验，还有大家的反馈，还经历过前几个星期最艰难的时期，这些其实不是惨，我反倒觉得在为后面应用的更新做铺垫，没经历过这些，我不会想重新做一款蓝鲸，没经历这些，我不会知道速鱼的短板在哪里，没经历过这些，我不会知道其实服务器也挺贵的，没经历过这些，我不会知道其实你们一直在支持我。\n    说到蓝鲸，这几天有人在问，说上面有个叫鲸蓝的，我自己也看了一下，确实是有，不过他们是公司的，也做好大，也是付费的。前面我也没想那么多，只是名字而且，我也丝毫没有想蹭他们大公司的热度，或许后面会在改名字吧，不过我是真喜欢蓝鲸这个名字，这个后面再看吧，现在还是把服务器优化好，这才是我该做的，速鱼应该是停更了，过渡期间会更换服务器，保证能用，白天我看速度还是可以的，晚上就是看怎么抢速了，有时候可以，有时候巨难。蓝鲸应该是下个月出来，到时候会发布测试版，我也想找一些朋友帮我测试测试，找找bug，到时候googleplay会有申请通道，希望大家能帮帮忙。至于你们有人问，蓝鲸收费么，蓝鲸会一样免费，不过广告会全部回来，现在你们说我服务器开销撑不撑得了，我不是什么富二代，没有多少资产。只是现在我觉得有那么一件事，我想去做。所以开销这些你们不用担心，我自己也是在等蓝鲸。不想因为前期的费用而半途而废。至于有人问，服务器一台一个月多少钱，我是觉得现在这阶段我回答并不好，说了有种哭穷的嫌疑。等收支平衡后，我会公布服务器的费用，普通的服务器的费用还好，高级服务器老实说我是耗不起，所以才关了，当然最主要还是开发的问题，时间仓促，没有做远程，所以很麻烦。还有很多，还有很多。我们蓝鲸见呗！速鱼敬上！2019-03-19."
+          "title": "蓝鲸公测上线",
+          "content": "   公测上线，想帮我测试的小伙伴欢迎下载测试，搜索“bluewhale vpn”，可能会有两个，一个是我的，一个是之前说的那个鲸蓝，大家不要下载错了，关于服务器，目前还是和速鱼一样，服务器会在这两天更新。希望会越来越好。"
         }
       ]
     }
