--- a/newappInfo.json
+++ b/newappInfo.json
@@ -13,7 +13,7 @@
       "info": [
         {
           "title": "蓝鲸公测上线",
-          "content": "   公测上线，想帮我测试的小伙伴欢迎下载测试，搜索“bluewhale vpn”，可能会有两个，一个是我的，一个是之前说的那个鲸蓝，大家不要下载错了，关于服务器，目前还是和速鱼一样，服务器会在这两天更新。希望会越来越好。"
+          "content": "   公测上线，想帮我测试的小伙伴欢迎下载测试，搜索“bluewhale vpn”或者“com.bluewhale.vpn.shadowsocks”，可能会有两个，一个是我的，一个是之前说的那个鲸蓝，大家不要下载错了，关于服务器，目前还是和速鱼一样，服务器会在这两天更新。希望会越来越好。"
         }
       ]
     }
