--- a/newappInfo.json
+++ b/newappInfo.json
@@ -14,6 +14,9 @@
         {
           "title": "蓝鲸正式版上线了",
           "content": "   正式版上线，想体验的小伙伴，搜索“BlueWhale Studio”、“bluewhale vpn”或者“com.bluewhale.vpn.shadowsocks”，可能会有两个，一个是我的，一个是之前说的那个鲸蓝，大家不要下载错了，关于服务器，目前加多了两个服务器，一个高级新加坡，一个巴黎服务器，后续会在优化服务器，还有一些bug后续都会优化，没有googleplay的小伙伴可以给我发邮件，我会发连接，或者安装包给你们。我自己也觉得新的蓝鲸会比较好用，不过广告都加回来了，大家体谅一下。我不强迫大家去看广告，只是设置在哪里，看与不看都是看自己的需求，后面把全局加回来就完美了。"
+        },{
+          "title": "BlueWhale Studio",
+          "content": "   搜索这个“BlueWhale Studio”。"
         }
       ]
     }
