--- a/newappInfo.json
+++ b/newappInfo.json
@@ -6,9 +6,9 @@
       "closeRewardAd":true,
       "isLimitedTraffic": false,
 	  "cInfo":"“蓝鲸”公测已经上线",
-	  "cInfoTip":"搜索“bluewhale vpn”",
+	  "cInfoTip":"搜索“BlueWhale Studio”",
 	  "eInfo":"“BlueWhale” public beta is online",
-	  "eInfoTip":"search for“bluewhale vpn”",
+	  "eInfoTip":"search for“BlueWhale Studio”",
 	  "playStoreUrl":"",
       "info": [
         {
