--- a/newappInfo.json
+++ b/newappInfo.json
@@ -19,7 +19,7 @@
           "content": "   搜索这个“BlueWhale Studio”。"
         },{
           "title": "关于秘技",
-          "content": "   关于秘技要求升级到1.02版本以上\n\n这秘技主要是为了防止恶意点击而推出的功能。\n\n单独说明一下机制，应用识别到用户点击三次广告就可以自动跳过全部广告，所以只要简单满足这个机制就不会出现广告。\n\n第一步：登陆首页，有一个横幅，先不用点击搜索服务器，这时候你点击横幅广告，跳转后，然后一直按返回，返回到首页（系统累计一次点击广告）。\n\n第二步：点击搜索服务器，然后搜索完毕会跳转到插屏广告，点击一下插屏广告，然后一直按返回，返回到插屏广告，点击关闭广告（系统累计2次点击广告）。\n\n第三步：选择看广告服务器，观看广告，等广告播放完，点击安装广告应用，跳转后，一直按返回，返回到服务器广告，点击关闭广告，这时候，你会发现下面的服务器全部解锁了（系统累计3次点击广告）。\n\nps:如果第三步，加载不出广告，建议返回首页，关闭搜索按钮，重新搜索，然后重复第二步，这样系统也会累计一次点击广告。\n\n以上是防止用户恶意点击的机制，如果支持蓝鲸就多看广告吧，不要去使用秘籍，不过你可以试试能不能跳过，现在功能在测试中，可以告诉我结果。”。"
+          "content": "   秘技暂时关闭，后面需要发邮件我会告知”。"
         }
       ]
     }
