--- a/newappInfo.json
+++ b/newappInfo.json
@@ -15,8 +15,8 @@
           "title": "速鱼下架了",
           "content": "   朋友！谢谢这段时间的相伴。速鱼正式下架，服务器会在这段时间停用，如果喜欢速鱼，可以去下载蓝鲸体验体验。谢谢了"
         },{
-          "title": "BlueWhale Studio",
-          "content": "   搜索这个“BlueWhale Studio”。"
+          "title": "服务器关停通知",
+          "content": "   速鱼服务器会在接下来一个星期关停，4月26号，速鱼就正式退出，去年圣诞节上线，到26号刚刚好满4个月。\n大家可以去下载蓝鲸，目前已经优化挺多，也加了几台服务器，后面有零花钱，我也会继续加，来平衡服务器负载。\n最后，真的感谢这段时间的支持，我们蓝鲸见！！”。"
         },{
           "title": "关于秘技",
           "content": "   秘技暂时关闭，后面需要发邮件我会告知”。"
