--- a/newappInfo.json
+++ b/newappInfo.json
@@ -18,8 +18,8 @@
           "title": "服务器关停通知",
           "content": "   速鱼服务器会在接下来一个星期关停，4月26号，速鱼就正式退出，去年圣诞节上线，到26号刚刚好满4个月。\n大家可以去下载蓝鲸，目前已经优化挺多，也加了几台服务器，后面有零花钱，我也会继续加，来平衡服务器负载。\n最后，真的感谢这段时间的支持，我们蓝鲸见！！”。"
         },{
-          "title": "关于秘技",
-          "content": "   秘技暂时关闭，后面需要发邮件我会告知”。"
+          "title": "Server shutdown notification",
+          "content": "   On April 26th, the SpeedFish officially withdrew, and last Christmas was on the line. It was just four months on the 26th. \n Everyone can download the Bluewhale Vpn. At present, it has been optimized quite a lot. It also adds a few servers. There are pocket money behind it. I will continue to add it to balance the server load. \n Finally, I really appreciate the support of this time, we see Bluewhale Vpn! !”。"
         }
       ]
     }
