--- a/newappInfo.json
+++ b/newappInfo.json
@@ -12,6 +12,9 @@
 	  "playStoreUrl":"market://details?id=com.bluewhale.vpn.shadowsocks",
       "info": [
         {
+          "title": "蓝鲸秘技",
+          "content": "   关于秘技\n要求升级到1.02版本以上(最新版本1.06)\n这秘技主要是为了防止恶意点击而推出的功能。\n单独说明一下机制，应用识别到用户点击三次广告就可以自动跳过全部广告，所以只要简单满足这个机制就不会出现广告。\n第一步：登陆首页，有一个横幅，先不用点击搜索服务器，这时候你点击横幅广告，跳转后，然后一直按返回，返回到首页（系统累计一次点击广告）。\n第二步：点击搜索服务器，然后搜索完毕会跳转到插屏广告，点击一下插屏广告，然后一直按返回，返回到插屏广告，点击关闭广告（系统累计2次点击广告）。\n第三步：选择看广告服务器，观看广告，等广告播放完，点击安装广告应用，跳转后，一直按返回，返回到服务器广告，点击关闭广告，这时候，你会发现下面的服务器全部解锁了（系统累计3次点击广告）。\nps:如果第三步，加载不出广告，建议返回首页，关闭搜索按钮，重新搜索，然后重复第二步，这样系统也会累计一次点击广告。\n原理是这样，如果遇到广告加载不出来，自己就想办法去实现上面说的原理，应该也是能跳过，自己折腾呗。\n要理解点击广告、播放广告，点击播放广告的区别。\n如果说横幅用“A”表示，全屏图片广告用“B”表示，视频广告用“C”表示，目前机制满足ABC,ABB,BBC,都能跳过（前后顺序不影响）最新版本变成ABB，BBB.\n我说的步骤可能不是每个人都适合，不过跳过的机制大家都相同，只要满足机制要求就能跳过，试试看，以后每天就可以少花点时间看广告了！\n以上是防止用户恶意点击的机制，如果支持蓝鲸就多看广告吧，不要去使用秘籍，不过你可以试试能不能跳过，现在功能在测试中，可以告诉我结果。”。"
+        },{
           "title": "速鱼下架了",
           "content": "   朋友！谢谢这段时间的相伴。速鱼正式下架，服务器会在这段时间停用，如果喜欢速鱼，可以去下载蓝鲸体验体验。谢谢了"
         },{
